The changes have been commited

--- a/Resume/html/motto.html
+++ b/Resume/html/motto.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <<html>
 <head>
-	<title></title>
+	<title>Web Technologies 2G</title>
 </head>
 <body>
 	<h1>My motto is kumain ng adobong kuto</h1>
+
+<nav>
+	<ul>
+		<li>Home</li>
+		<li>Skills</li>
+		<li>Educational Background</li>
+	</ul>
+</nav>
 </body>
 </html>
