New stylesheet has been commited

--- a/Resume/html/index.html
+++ b/Resume/html/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <<html>
+
+
 <head>
+	<meta charset = "utf -8">
+	<meta name = "viewport" content = "width=device-width, initial-scale = 1">
 	<title>Web Technologies 2G</title>
+
 </head>
+
 <body>
+
+	<header >
+		<h2>Jhun Roy Bidang's</h2>
+
+		<nav>
+			<ul>
+			<li>Home </li>
+			<li>Skills</li>
+			<li>Eductional Background</li>
+		</ul>
+		</nav>
+		
+	</header>
+
+
 	<h1>My motto is kumain ng adobong kuto</h1>
 
-<nav>
-	<ul>
-		<li>Home</li>
-		<li>Skills</li>
-		<li>Educational Background</li>
-	</ul>
-</nav>
+
+	<footer>
+		<p> email address:  jhunroybidang@gmail.com </p>
+		<p> facebook: </p>
+		<p> instagram: </p>
+	</footer>
 </body>
 </html>
