New changes have been commited

--- a/Resume/html/index.html
+++ b/Resume/html/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<<html>
-
+<html>
 
 <head>
-	<meta charset = "utf -8">
-	<meta name = "viewport" content = "width=device-width, initial-scale = 1">
+	<link rel="stylesheet" type="text/css" href="myStyle.css">
 	<title>Web Technologies 2G</title>
-
 </head>
 
 <body>
-
 	<header >
 		<h2>Jhun Roy Bidang's</h2>
 
@@ -25,7 +21,7 @@
 	</header>
 
 
-	<h1>My motto is kumain ng adobong kuto</h1>
+	<h1>Mowto</h1>
 
 
 	<footer>
@@ -33,5 +29,6 @@
 		<p> facebook: </p>
 		<p> instagram: </p>
 	</footer>
+
 </body>
 </html>
