New changes have been commited

--- a/Resume/html/index.html
+++ b/Resume/html/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="myStyle.css">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="myStyle.css">
 	<title>Web Technologies 2G</title>
 </head>
 
-<body>
-	<header >
-		<h2>Jhun Roy Bidang's</h2>
+<header >
+		<h3>Jhun Roy Bidang's</h3>
 
 		<nav>
 			<ul>
 			<li>Home </li>
 			<li>Skills</li>
 			<li>Eductional Background</li>
-		</ul>
+			</ul>
 		</nav>
 		
 	</header>
 
+<body>
 
-	<h1>Mowto</h1>
+	<section>
+		<!-- objectives -->
 
 
-	<footer>
+	</section>
+
+	<section>
+		<!-- personal info -->
+
+	</section>
+	
+
+</body>
+
+<footer>
 		<p> email address:  jhunroybidang@gmail.com </p>
 		<p> facebook: </p>
 		<p> instagram: </p>
-	</footer>
+</footer>
 
-</body>
+
 </html>
