--- a/Resume/html/index.html
+++ b/Resume/html/index.html
@@ -1,45 +1,59 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="myStyle.css">
 
-<head>
+
+<head >
 	<title>Web Technologies 2G</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
-
-<header >
-		<h3>Jhun Roy Bidang's</h3>
-
-		<nav>
-			<ul>
-			<li>Home </li>
-			<li>Skills</li>
-			<li>Eductional Background</li>
-			</ul>
-		</nav>
 		
-	</header>
-
 <body>
 
-	<section>
+	<header style="padding: 30px; background-color: rgb(150,150,150);">
+				<h3>Jhun Roy Bidang's</h3>
+
+				<div style=" position: absolute;  right: 80px; bottom: 875px">
+					<ul>MENU
+					<li><a href="">Home</a> </li>
+					<li><a href="">Skills</a></li>
+					<li><a href="">Eductional Background</a></li>
+					</ul>
+				</div>
+	</header>
+
+	<section style="padding: 100px; background-color: rgb(224,224,224)">
 		<!-- objectives -->
-
-
+		<center><p>Objectives</p></center>
+		<center><p>There are several objectives that I want to accomplish in my life both for short term and for long term. One of the long term is to finish up up my studies.</p></center>
+		
+		<!--Insert image -->
+		<div>
+			<img src="graduation3.jpg">
+		</div>
+		
+		<center><p>For short term objectives, One is to pass this midterm exam</p></center>
+		<!--Insert image -->
 	</section>
 
-	<section>
+	<section class="personalSection" style="padding: 100px; background-color: rgb(224,224,224)">
 		<!-- personal info -->
+		<center><p>Personal Information</p></center>
+		<br><br>
+		<p>Age: 20</p>
+		<p>Gender: Male</p>
+		<p>Address: Baguio City, Philippines</p>
 
 	</section>
 	
+	<footer style="padding: 40px; background-color: rgb(128,128,128);">
+		<p> email address:  jhunroybidang@gmail.com </p>
+		<p> facebook: jhun roy</p>
+	</footer>
 
 </body>
 
-<footer>
-		<p> email address:  jhunroybidang@gmail.com </p>
-		<p> facebook: </p>
-		<p> instagram: </p>
-</footer>
+
 
 
 </html>
